2012-03-05  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Don't suppress implied downloads for top-level actions.

	* src/pkgdeps.cpp: Update copyright notice for new year.
	(pkgXmlDocument::Schedule) [!OPTION_PRINT_URIS]: Ensure that...
	[ACTION_DOWNLOAD]: ...this is enabled, when scheduling an install or
	an upgrade action for a package specified as a command line argument;
	this corrects a regression introduced on 2011-11-09, which resulted in
	ACTION_DOWNLOAD being enabled only for second tier dependent actions.

2012-02-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Copyright notice updates.

	* Makefile.in: Add 2012 as year of republication.
	* src/pkgbase.h src/sysroot.cpp src/pkgexec.cpp: Likewise.
	* src/rites.c src/pkginst.cpp src/pkgunst.cpp: Likewise.

2012-02-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix ill-advised optimisation in $APPROOT environment lookup.

	* src/rites.c (approot_path): Don't save result of getenv() lookup
	across calls; the environment may have been moved in the interim,
	making the original result invalid on any subsequent call.  Also,
	prefer MS-Windows style (with backslashes) for default.
	(pkgLastRites): Report full path name for lastrites.exe, on execl()
	failure, rather than only the path relative to $APPROOT.

2012-02-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Propagate sysroot path settings to scripts via the environment.

	* src/pkgbase.h (PKG_PUTENV_FLAGS_MASK): New constant; it maps...
	(PKG_PUTENV_DIRSEP_MSW, PKG_PUTENV_DIRSEP_POSIX): ...these flags...
	(PKG_PUTENV_SCAN_VARNAME, PKG_PUTENV_NAME_TOUPPER): ...and these;
	they are used to specify optional behavioural choices for...
	(pkgPutEnv): ...this new function; declare it.

	* src/sysroot.cpp (pkgPutEnv): Implement it.
	(pkgXmlDocument::LoadSystemMap): Use it to add $SUBSYSTEM_SYSROOT path
	specifications to the environment, for each named subsystem associated
	with the active system map.
